--- a/sjcu_service/package.xml
+++ b/sjcu_service/package.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sjcu_topic</name>
+  <name>sjcu_service</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="chungh6577@sju.ac.kr">lch</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
-  <depend>geometry_msgs</depend>
-  <depend>nav_msgs</depend>
   <depend>std_msgs</depend>
-
+  <depend>nav_msgs</depend>
+  <depend>std_srvs</depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
