--- a/sjcu_topic/package.xml
+++ b/sjcu_topic/package.xml
@@ -11,7 +11,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>std_msgs</depend>
-
+  <depend>sjcu_custom</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
